Updated token authentication flow control